--- a/main.html
+++ b/main.html
@@ -21,6 +21,67 @@
     <script async src="sample.js"></script>
 </head>
 <body>
+<video src="https://www.youtube.com/watch?v=cxBFqPkoLt4" ></video>
+<meter value="90" id="progress" min="10" max="100" low="40" high="80" optimum="60"></meter>
+<p><button type="button" value="30">30%</button>
+<button type="button" value="60">60%</button>
+    <button type="button" value="90">90%</button> </p>
+
+
+    <fieldset>
+        <legend>Price Calculator</legend>
+        <input type="number" placeholder="Quantity" id="quant" name="quant">*
+        <input type="number" placeholder="Price"  name="price"> =
+        <output for="quant price" name="res"/>
+    </fieldset>
+</form>
+<form onsubmit="return false" oninput="res.value = quant.valueAsNumber * price.valueAsnumber">
+    <fieldset>
+        <legend>Form</legend>
+        <input type="number" placeholder="Quantity"  name="quant">*
+        <input type="number" placeholder="Price" id="price" name="price"> =
+        <output for="quant name" name="res"/>
+        <p><label>Name : <input  type="text" list="data-list" name="name"></label></p>
+        <p><label>per : <input type="number" min="0" max="100" step="10" value="15"></label></p>
+        <p><label>Range: <input type="range" min="10" max="200" step="20" value="50"></label></p>
+        <input type="date">
+        <input type="color">
+        <p>
+            <label for="search">
+                Search:
+                <input id=search type="search">
+            </label>
+        </p>
+        <p>
+            <input type="file" name="filedata">
+        </p>
+        <p>
+            <label for="fave" style="vertical-align: top">
+                Favorite Fruit:
+                <select id="fave" name="fave" size="5" multiple>
+                    <optgroup label="Group1">
+                    <option value="apples" selected label="Apples"></option>
+                    <option value="oranges" >Oranges</option>
+                    </optgroup>
+                    <optgroup label="Group2">
+                    <option value="cherries" label="Cherries">Cherries</option>
+                    <option value="pears" selected label="Pears">Pears</option>
+                    </optgroup>
+                </select>
+            </label>
+        </p>
+        <p>
+            <textarea cols="5" role="5" wrap="soft" id="story" name="story">Tell us your story .</textarea>
+        </p>
+        <button type="submit">submit</button>
+
+    </fieldset>
+</form>
+<datalist id="data-list">
+    <option value="Apple" label="My apple">My apple</option>
+    <option value="Orange" label="My orange"></option>
+    <option value="Juice"></option>
+</datalist>
 <p>This is right to lef: <bdo dir="rtl"> I love you .</bdo></p>
 <p>This is left to right: <bdo dir="ltr">I love you .</bdo></p>
 <ruby>魑<rp>(</rp><rt>Chi</rt><rp>)</rp></ruby>
@@ -29,5 +90,23 @@
 <time >6.11</time>
 <p>This is a <code id="code">test</code></p>
 <a href="baidu.com">Baidu</a>
+<script>
+    function foo() {
+
+
+        var buttons = document.getElementsByTagName("button")
+        var progress = document.getElementById("progress")
+        for (var index = 0; index < buttons.length; index++) {
+            buttons[index].onclick = function (e) {
+                //progress.setAttribute("value", 50)
+                progress.value = e.target.value
+            }
+        }
+    }
+    window.onload = function () {
+        foo()
+    }
+
+</script>
 </body>
 </html>
