提交类关于css知识的总结。 提交了浮动属性相关文档； 提交了定位属性相关文档。

--- a/table-layout.html
+++ b/table-layout.html
@@ -39,8 +39,8 @@
         </p>
     </div>
     <div class="row">
-        <p>This is an apple. <img src="images.jpg" alt="apple" </p>
-        <p>This is a banna. <img src="images2.png" alt="banana" </p>
+        <p>This is an apple. <img src="images.jpg" alt="apple"> </p>
+        <p>This is a banna. <img src="images2.png" alt="banana"> </p>
         <p>No picture here.</p>
     </div>
 </div>
