重新捡起HTML学习；

--- a/Old/canvas.html
+++ b/Old/canvas.html
@@ -16,7 +16,7 @@
     Your browser does not support canvas .
 </canvas>
 <script>
-    var canvas = document.getElementById("canvas").getContext("2d")
+    var canvas = document.getElementById("canvas").getContext("2d");
     /*var count = 5;
     for (var index=0;index<count;index++){
 
@@ -26,11 +26,11 @@
         canvas.strokeRect(index*50,90,30,30);
         //canvas.clearRect(index*50,60,30,10)
     }*/
-    var grad = canvas.createLinearGradient(0,0,100,80)
-    grad.addColorStop(0,"red")
-    grad.addColorStop(0.5,"green")
-    grad.addColorStop(1,"blue")
-    canvas.fillStyle = grad
+    var grad = canvas.createLinearGradient(0, 0, 100, 80);
+    grad.addColorStop(0, "red");
+    grad.addColorStop(0.5, "green");
+    grad.addColorStop(1, "blue");
+    canvas.fillStyle = grad;
     canvas.fillRect(0,0,200,160)
 
 </script>
