--- a/Old/dom.html
+++ b/Old/dom.html
@@ -39,7 +39,7 @@
     <!--document.writeln("</pre>")-->
 <!--</script>-->
 <script>
-    document.writeln( document.cookie)
+    document.writeln(document.cookie);
     document.getElementById("press").onclick = function () {
         document.location.hash = "bear"
 
