--- a/Old/layouy.html
+++ b/Old/layouy.html
@@ -52,7 +52,7 @@
 
 
     <script>
-        var buttons = document.getElementsByTagName("button")
+        var buttons = document.getElementsByTagName("button");
         for (var index=0;index<buttons.length;index++){
             buttons[index].onclick = function (e) {
                 document.getElementById("banana").style.position = e.target.innerHTML
