--- a/Old/main.html
+++ b/Old/main.html
@@ -94,8 +94,8 @@
     function foo() {
 
 
-        var buttons = document.getElementsByTagName("button")
-        var progress = document.getElementById("progress")
+        var buttons = document.getElementsByTagName("button");
+        var progress = document.getElementById("progress");
         for (var index = 0; index < buttons.length; index++) {
             buttons[index].onclick = function (e) {
                 //progress.setAttribute("value", 50)
